# advent-of-code-2019

./: .gitignore  BUILD  LICENSE  Makefile  README.md  WORKSPACE  go.mod  go.sum
aoc2019_elixir/: .editorconfig  README.md  mix.exs
aoc2019_elixir/apps/aoc/: mix.exs
aoc2019_elixir/apps/aoc/lib/: intcode.ex  problem.ex
aoc2019_elixir/apps/aoc/lib/intcode/: computer.ex  instruction.ex  list_handler.ex  memory.ex
aoc2019_elixir/apps/aoc/test/: computer_test.exs  instruction_test.exs
aoc2019_elixir/apps/day01/: mix.exs
aoc2019_elixir/apps/day01/lib/: day01.ex  fuel.ex
aoc2019_elixir/apps/day01/test/: fuel_test.exs
aoc2019_elixir/apps/day02/: mix.exs
aoc2019_elixir/apps/day02/lib/: day02.ex
aoc2019_elixir/apps/day03/: mix.exs
aoc2019_elixir/apps/day03/lib/: day03.ex  map.ex  path.ex
aoc2019_elixir/apps/day03/test/: map_test.exs  path_test.exs
aoc2019_elixir/apps/day05/: mix.exs
aoc2019_elixir/apps/day05/lib/: day05.ex
aoc2019_elixir/apps/day07/: mix.exs
aoc2019_elixir/apps/day07/lib/: connector.ex  day07.ex  permutations.ex
aoc2019_elixir/apps/day07/test/: permutations_test.exs
aoc2019_elixir/apps/day09/: mix.exs
aoc2019_elixir/apps/day09/lib/: day09.ex
aoc2019_elixir/apps/day14/: mix.exs
aoc2019_elixir/apps/day14/lib/: day14.ex  reaction.ex  table.ex
aoc2019_elixir/apps/day14/test/: reaction_test.exs  table_test.exs
aoc2019_elixir/apps/day22/: mix.exs
aoc2019_elixir/apps/day22/lib/: day22.ex  math.ex  move.ex
aoc2019_elixir/apps/day22/test/: math_test.exs  move_test.exs
aoc2019_elixir/apps/day23/: mix.exs
aoc2019_elixir/apps/day23/lib/: day23.ex  nat.ex  packet_queue.ex  router.ex
aoc2019_elixir/apps/days/: .gitignore  README.md  mix.exs
aoc2019_elixir/apps/days/lib/: days.ex  supervisor.ex
aoc2019_elixir/apps/days/test/: days_test.exs
aoc2019_elixir/config/: config.exs
cmd/day1/: BUILD.bazel  main.go
cmd/day10/: BUILD.bazel  main.go
cmd/day11/: BUILD.bazel  main.go
cmd/day12/: BUILD.bazel  main.go
cmd/day13/: BUILD.bazel  main.go
cmd/day14/: BUILD.bazel  main.go
cmd/day15/: BUILD.bazel  main.go
cmd/day16/: BUILD.bazel  main.go
cmd/day17/: BUILD.bazel  main.go
cmd/day18/: BUILD.bazel  main.go
cmd/day19/: BUILD.bazel  main.go
cmd/day2/: BUILD.bazel  main.go
cmd/day20/: BUILD.bazel  main.go
cmd/day21/: BUILD.bazel  main.go
cmd/day22/: BUILD.bazel  main.go
cmd/day23/: BUILD.bazel  main.go
cmd/day24/: BUILD.bazel  main.go
cmd/day3/: BUILD.bazel  main.go
cmd/day4/: BUILD.bazel  main.go
cmd/day5/: BUILD.bazel  main.go
cmd/day6/: BUILD.bazel  main.go
cmd/day7/: BUILD.bazel  main.go
cmd/day8/: BUILD.bazel  main.go
cmd/day9/: BUILD.bazel  main.go
cmd/intcode-cli/: BUILD.bazel  main.go  mode.go
cmd/intcode-server/: BUILD.bazel  main.go
day1/: BUILD.bazel  fuel.go  fuel_test.go  mass.go
day10/: BUILD.bazel  asteroid.go  map.go  map_test.go
day11/: BUILD.bazel  canvas.go  direction.go  robot.go
day12/: BUILD.bazel  cycle_finder.go  moon.go  moon_system.go  moon_system_test.go  moon_test.go  vector.go
day13/: BUILD.bazel  canvas.go  game.go  player.go
day14/: BUILD.bazel  quantity.go  rule.go  rule_test.go  table.go  table_test.go
day15/: BUILD.bazel  canvas.go  fill.go  mapper.go  path_finder.go
day16/: BUILD.bazel  decode.go  fft.go  fft_test.go
day17/: BUILD.bazel  canvas.go  cleaner.go  intersections.go
day18/: BUILD.bazel  input2.txt  map.go  map_test.go  path.go  point_queue.go  point_queue_test.go
day19/: BUILD.bazel  canvas.go  drone.go
day2/: BUILD.bazel  vm.go  vm_test.go
day20/: BUILD.bazel  map.go  map_test.go  point_queue.go  point_queue_test.go  queue.go  queue_test.go
day21/: BUILD.bazel  droid.go
day22/: BUILD.bazel  shuffle.go  technique.go  technique_test.go
day23/: BUILD.bazel  nat.go  network.go
day24/: BUILD.bazel  grid.go  grid_test.go  recursive_grid.go
day3/: BUILD.bazel  map.go  map_test.go  path.go  path_test.go
day4/: BUILD.bazel  password.go  password_test.go
day5/: BUILD.bazel  instruction.go  vm.go  vm_test.go
day6/: BUILD.bazel  tree.go  tree_test.go
day7/: BUILD.bazel  amplifier.go  amplifier_test.go  instruction.go  permutations.go  permutations_test.go  vm.go  vm_test.go
day8/: BUILD.bazel  image.go  image_test.go
day9/: BUILD.bazel  instruction.go  vm.go  vm_test.go
pkg/input/: BUILD.bazel  input.go
pkg/intcode/: BUILD.bazel  instruction.go  vm.go  vm_test.go
pkg/intcode/proto/: BUILD.bazel  intcode.proto
pkg/intcode/server/: BUILD.bazel  server.go
pkg/mathalg/: BUILD.bazel  gcd.go  gcd_test.go  lcm.go  lcm_test.go
pkg/point/: BUILD.bazel  point.go
