load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "canvas.go",
        "drone.go",
    ],
    importpath = "github.com/mjm/advent-of-code-2019/day19",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/intcode:go_default_library",
        "//pkg/point:go_default_library",
    ],
)
