load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "map.go",
        "queue.go",
    ],
    importpath = "github.com/mjm/advent-of-code-2019/day20",
    visibility = ["//visibility:public"],
    deps = ["//pkg/point:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "map_test.go",
        "queue_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/point:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
