load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "nat.go",
        "network.go",
    ],
    importpath = "github.com/mjm/advent-of-code-2019/day23",
    visibility = ["//visibility:public"],
    deps = ["//pkg/intcode:go_default_library"],
)
