load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mjm/advent-of-code-2019/cmd/day5",
    visibility = ["//visibility:private"],
    deps = [
        "//day5:go_default_library",
        "//pkg/input:go_default_library",
    ],
)

go_binary(
    name = "day5",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
