load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mjm/advent-of-code-2019/cmd/day6",
    visibility = ["//visibility:private"],
    deps = ["//day6:go_default_library"],
)

go_binary(
    name = "day6",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
