load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mjm/advent-of-code-2019/cmd/day7",
    visibility = ["//visibility:private"],
    deps = ["//day7:go_default_library"],
)

go_binary(
    name = "day7",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
