load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mjm/advent-of-code-2019/cmd/day8",
    visibility = ["//visibility:public"],
    deps = ["//day8:go_default_library"],
)

go_binary(
    name = "day8",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
