load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mjm/advent-of-code-2019/cmd/intcode-server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/intcode/proto:go_default_library",
        "//pkg/intcode/server:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "intcode-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
