load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "intcode_proto",
    srcs = ["intcode.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "intcode_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/mjm/advent-of-code-2019/pkg/intcode/proto",
    proto = ":intcode_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":intcode_go_proto"],
    importpath = "github.com/mjm/advent-of-code-2019/pkg/intcode/proto",
    visibility = ["//visibility:public"],
)
